modules/_header.sass
// Header toggle width
$toggle-width: 900px

.mod-header
  top: 0
  width: 100%
  z-index: 100
  background: #fff
  min-height: 80px
  position: fixed
  box-shadow: 0 5px 30px rgba($dark,0.1)

  .layout-wrap
    display: flex
    align-items: center
    min-height: 80px
    padding: 20px 30px !important

  .fa
    margin-left: 5px
    top: 1px

  // the logo
  h1 a img
    width: 140px
    display: block

  a
    text-decoration: none
    display: block
    color: $darkest

  .subnav-small,
  .subnav-large
    display: none

  // hide navigation
  +max-width($toggle-width - 1px)
    nav
      display: none

  // full-size navigation shown
  +min-width($toggle-width)
    nav
      display: flex
      align-items: center

      > ul
        display: flex
        width: 100%

        >li

          > a
            padding: 5px 15px

    a.active
      background: $border
      border-radius: $br

    .main
      margin-left: auto
      margin-right: auto

    +min-width(1000px)
      h1 a,
      .cta
        width: 300px

    .cta ul
      justify-content: flex-end

      li:last-child
        margin-left: 20px
        padding-right: 0

  // Toggle button styling
  .toggle
    margin-left: auto
    display: none
    cursor: pointer

    +max-width(#{$toggle-width - 1px})
      display: flex
      align-items: center


  // navigation when toggled
  +max-width($toggle-width - 1px)
    .canvas-menu &
      position: fixed
      max-height: 100vh
      overflow: auto

      .subnav-small
        display: block

      .subnav-large
        display: block
        figure,
        span,
        p
          display: none

      .tour-toggle > a
        display: none

      .main
        margin-top: 20px

        a
          padding: 10px 0
          border-top: 1px solid $border

      .cta
        padding-bottom: 60px

        a
          margin-top: 20px

      nav
        flex: 0 0 100%
        display: block

        a
          display: block

      .layout-wrap
        height: 100vh

    .layout-wrap
      padding: 20px 30px
      flex-wrap: wrap
      align-content: flex-start

    .icon
      display: none

  +min-width($toggle-width)
    .subnav-large
      +br
      background: #fff
      text-align: center
      position: absolute
      left: 50%
      top: calc(100% - 10px)
      transform: translateX(-50%)
      flex-wrap: wrap
      width: calc(100% - 60px)
      max-width: 1200px
      min-width: calc($toggle-width - 60px)
      align-items: stretch
      justify-content: center
      display: flex
      box-shadow: 0 5px 30px rgba($dark,0.1)
      display: none

      &.show
        display: flex

      li.elixir
        width: 100%
        padding: 20px
        border-top: 1px solid $border
        width: 100%

        .tag
          margin: 0 10px 0 0
        a
          display: inline-block
          color: $blue
          text-decoration: underline

      li.tour
        flex: 1
        padding: 0
        justify-content: flex-start

        & + li.tour
          border-left: 1px solid $border

        a
          padding: 20px

        a:hover
          img
            transform: scale(1.2)

        strong
          +font-weight(bold)
          white-space: nowrap

        p
          font-size: 14px
          line-height: 1.75
          color: $medium

        figure
          height: 40px
          display: flex
          align-items: center
          justify-content: center
          margin-bottom: 5px

        img
          height: 30px
          transition: all 0.2s ease-in-out

        &.performance img
          height: 20px

    .tour-toggle a
      .fa
        position: relative
        transition: all 0.2s ease-in-out

      &.show .fa
        transform: rotateX(-180deg)

  @each $item in $navigation
    .#{map-get($item, "class")}
      a
        color: #{map-get($item, "color")}

